# proj02-group08

./: .gitignore  .jupytext.toml  Makefile  README.md  ai_documentation.txt  contribution_statement.md  environment.yml  environment_TESTING_123_HISTORY.yml  environment_TESTING_123_NOBUILDS.yml  myst.yml  project-description-todos.md  pyproject.toml  pyproject_BACKUP.toml  testing123.ipynb
data/01_processed/: sou_step00_year_2000_and_above.csv  sou_step01_year_2000_and_above_text.csv
misc/: proj02-nlp-BACKUP.ipynb  proj02-nlp.ipynb  proj02-nlp.py  testing123-playing.ipynb  testing123.py
notebooks/: nlp-P01.ipynb  nlp-P01.py  nlp-P02-clean.ipynb  nlp-P02.ipynb  nlp-P02.py  nlp-P03.ipynb  nlp-P03.py  nlp-P04.ipynb  nlp-P04.py
notebooks/testing123/: nlp_P02.ipynb  nlp_P02.py  nlp_P03.ipynb  nlp_P03.py  nlp_P04.py
outputs/: lda_vis.html
src/: part00_utils_visuals.py  part01.py
