[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "proj02-group08"
version = "0.1.0"
authors = [
  { name="Your Name", email="author@example.com" },
]
description = "A Python library for Project 02 by Group 08"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/UCB-stat-159-f25/proj02-group08"
Issues = "https://github.com/UCB-stat-159-f25/proj02-group08/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "notebooks*", "tests*"]
